# compressor-gtk

./: .gitignore  Cargo.toml  README.md  build.rs  cross_compile.md  populate_release.sh  win_theme_settings.ini
src/: main.glade  main.glade~  main.rs  program.rc
