[package]
name = "compressor-gtk"
version = "0.1.0"
authors = ["Marco Amann <marco@amann.dev>"]
edition = "2018"

[dependencies]
compressor = { path = "../compressor", version = "0.1.0" }
chrono = "0.4"
url = "1.4"
futures-preview = { version = "0.2", optional = true }
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
#gtk = "^0"
pango = "^0"
lazy_static = "1.3.0"

[dependencies.gtk]
version = "0.6"
default-features = false  # just in case
features = ["v3_24"]



[features]
gtk_3_18 = ["gtk/v3_18", "gdk-pixbuf/v2_32", "gdk/v3_18", "gio/v2_46", "glib/v2_46", "pango/v1_38"] #for CI tools
gtk_3_22_30 = ["gtk_3_18", "gtk/v3_22_30", "gdk-pixbuf/v2_36", "gdk/v3_22", "gio/v2_56", "glib/v2_56", "pango/v1_42"] #for CI tools
gtk_3_24 = ["gtk_3_22_30", "gtk/v3_24", "atk/v2_30", "gdk-pixbuf/v2_36_8", "gdk/v3_24", "gio/v2_58", "glib/v2_58"]
